# CRAIA

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak2  README.md
app/: main.py  pyproject.toml  requirements.txt  requirements.txt.bak
app/DeepDream/: deep_dream.py  deepdream.ipynb
app/StyleTransfer/: fast_style_transfer_for_arbitrary_styles.py  tf_hub_fast_style_transfer_for_arbitrary_styles.py
app/TextToImage/: stable_diffusion.py
